2003-08-25  Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/doc.cpp
	* src/libopenvrml/openvrml/img.cpp
	* src/libopenvrml/openvrml/img.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node_class_ptr.cpp
	* src/libopenvrml/openvrml/node_ptr.cpp
	* src/libopenvrml/openvrml/node_type_ptr.cpp
	* src/libopenvrml/openvrml/scope.cpp
	* src/libopenvrml/openvrml/scope_ptr.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2003-08-22  Braden McDaniel  <braden@endoframe.com>

	Added Microsoft Visual Studio 7.0 solution and project files.

	* ide-projects/Windows/VisualC7/OpenVRML/OpenVRML.sln
	* ide-projects/Windows/VisualC7/OpenVRML/antlr/antlr.vcproj
	* ide-projects/Windows/VisualC7/OpenVRML/lookat/lookat.vcproj
	* ide-projects/Windows/VisualC7/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC7/OpenVRML/openvrml-gl/openvrml-gl.vcproj
	* ide-projects/Windows/VisualC7/OpenVRML/regex/regex.vcproj

2003-08-21  Braden McDaniel  <braden@endoframe.com>

	Changes to build with cl 13.00.9466.

	* src/libopenvrml/openvrml/script.cpp:  Fixed #ifdef's for
	conditionally building with JavaScript support.
	* src/libopenvrml/openvrml/system.cpp:  #include fixes.
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  Fixed improper
	use of aggregate initialization.

2003-08-20  Braden McDaniel  <braden@endoframe.com>

	* lib/antlr/antlr/config.hpp:  Fixed dllimport/dllexport macro
	for building a static library.

2003-08-20  Braden McDaniel  <braden@endoframe.com>

	Gave regex API functions C linkage.

	* lib/regex/regcomp.c
	* lib/regex/regerror.c
	* lib/regex/regex.h
	* lib/regex/regexec.c
	* lib/regex/regfree.c

2003-08-20  Braden McDaniel  <braden@endoframe.com>
