@@ -99,7 +99,7 @@ HTML_OUTPUT            = manual
 HTML_FILE_EXTENSION    = .html
 HTML_HEADER            = doxygen-header
 HTML_FOOTER            = doxygen-footer
-HTML_STYLESHEET        = openvrml.css
+HTML_STYLESHEET        = 
 HTML_ALIGN_MEMBERS     = YES
 GENERATE_HTMLHELP      = NO
 CHM_FILE               = 
