@@ -1,5 +1,4 @@
-<!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN"
-               "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN">
 
 <html>
 <head>
@@ -13,6 +12,62 @@
 <link rel="contents" href="index.html" title="Documentation Main Page">
 <link rel="index" href="functions.html" title="OpenVRML Compound Members">
 <link rel="appendix" href="conformance.html" title="Conformance Test Results">
+<style type="text/css">
+@import url("doxygen.css");
+@import url("http://openvrml.org/openvrml.css");
+
+.body td {
+  background-color: transparent;
+}
+
+div.qindex {
+  background-color: transparent;
+  border: none;
+}
+a.qindex {
+  text-decoration: inherit;
+  color: inherit
+}
+a.qindex:visited {
+  text-decoration: inherit;
+  font-weight: inherit;
+  color: inherit
+}
+a.qindex:hover {
+  text-decoration: inherit;
+  background-color: inherit
+}
+
+div.qindex :link {
+  font-weight: bold;
+}
+
+td.memItemLeft, td.memItemRight {
+  font-family: monospace;
+}
+
+td.memItemLeft, td.memItemRight, td.mdescLeft, td.mdescRight {
+  background-color: rgb(95%, 95%, 95%);
+}
+
+.mdRow {
+  background-color: rgb(95%, 95%, 95%);
+}
+
+.mdTable {
+  background-color: rgb(95%, 95%, 95%);
+}
+
+.mdRow td {
+  background-color: rgb(95%, 95%, 95%);
+  font-family: monospace;
+}
+
+.mdRow td code {
+  font-family: sans-serif;
+  font-style: italic;
+}
+</style>
 </head>
 <body>
 <table class="sitenav">
