@@ -1,141 +1,0 @@
-html {
-  overflow: -moz-scrollbars-vertical;
-  height: 100%;
-}
-
-body {
-  background-color: black;
-  color: white;
-  margin-left: 1em;
-  margin-right: 1em;
-  margin-bottom: 1em;
-}
-
-:link {
-  color: white;
-}
-:visited {
-  color: silver;
-}
-:link, :visited {
-  border-bottom: dashed 1px;
-  text-decoration: none;
-}
-:link:hover, :visited:hover {
-  border-bottom: solid 1px;
-}
-:link img, :visited img {
-  padding: 1px;
-  border: dashed 1px;
-}
-:link:hover img, :visited:hover img {
-  border: solid 1px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Luxi Serif", "LucidaBright", "Palatino", serif;
-  font-weight: normal;
-}
-
-h1 {
-  text-align: center;
-}
-
-pre, code {
-  font-family: "Luxi Mono", "Lucida Console", "LucidaTypewriter", monospace;
-}
-
-hr {
-  background-color: red;
-  color: red;
-  height: 3px;
-}
-
-.sitenav, .body, .body th, .body td, .body caption {
-  font-family: "Luxi Sans", "Verdana", "Lucida", sans-serif;
-  font-weight: normal;
-}
-
-.body, .body th, .body td, .body caption {
-  background-color: white;
-  color: black;
-  line-height: 1.3em;
-}
-
-.body {
-  padding: 1em;
-}
-
-.body :link {
-  color: black;
-}
-.body :visited {
-  color: gray;
-}
-
-.sitenav {
-  background-color: black;
-  color: white;
-  font-size: smaller;
-  width: 100%;
-  border: 0;
-  border-spacing: 0;
-  border-collapse: collapse;
-  margin-bottom: 0;
-}
-
-.sitenav th {
-  background-color: white;
-  color: black;
-  margin: 0;
-  border: 0;
-  padding: 0;
-  line-height: 1.5em;
-}
-
-.sitenav :link, .sitenav :visited {
-  background-color: black;
-  color: rgb(85%, 85%, 85%);
-  display: block;
-  margin: 0;
-  border: 0;
-}
-
-.sitenav :link:hover, .sitenav :visited:hover {
-  background-color: rgb(95%, 95%, 95%);
-  color: rgb(40%, 40%, 40%);
-}
-
-.footer {
-  margin-top: 1em;
-  font-size: smaller;
-}
-
-.md, td.md, .md td {
-  background-color: rgb(95%, 95%, 95%);
-}
-
-/*
-:link.qindex {}
-:link.qindexRef {}
-A.elRef { font-weight: bold }
-A.code { text-decoration: none; font-weight: normal; color: #4444ee }
-A.codeRef { font-weight: normal; color: #4444ee }
-*/
-DL.el { margin-left: -1cm }
-DIV.fragment { width: 100%; border: none; background-color: #eeeeee }
-DIV.ah {
-  background-color: black;
-  color: white;
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
-}
-DIV.groupHeader { margin-left: 16; margin-top: 12; margin-bottom: 6; font-weight: bold }
-DIV.groupText { margin-left: 16; font-style: italic; font-size: smaller }
-FONT.keyword       { color: #008000 }
-FONT.keywordtype   { color: #604020 }
-FONT.keywordflow   { color: #e08000 }
-FONT.comment       { color: #800000 }
-FONT.preprocessor  { color: #806020 }
-FONT.stringliteral { color: #002080 }
-FONT.charliteral   { color: #008080 }
